# Cinema-bot

./: .gitignore  .stats_webapp_url  CODE_REVIEW.md  CODE_REVIEW_v2.md  Dockerfile  OPTIMIZATION_PLAN.md  README.md  advertising.py  config.py  dashboard.py  database.py  docker-compose.yml  keyboards.py  launcher.py  main.py  movies.db  movies.db-shm  movies.db-wal  pyproject.toml  requirements.txt  runtime_manager.py  start_bot.bat  stats_tunnel.py  stop_bot.bat  webapp.py
ci/: github-actions-ci.yml
database/: __init__.py  admins.py  ads.py  cache.py  connection.py  constants.py  dashboard.py  favorites.py  history.py  movies.py  paths.py  requests.py  serials.py  sponsors.py  users.py  utils.py  views.py
handlers/: __init__.py  admin.__codex_backup__.bak  admin.py  admin_facade.py  admin_runtime_helpers.py  admin_states.py  admin_text_refined.py  admin_texts.py  admin_ui.py  channel_fix.py  chat_member.py  inline.py  kino.py  start.py  user.py  user_search_prompt.py
handlers/admin/: __init__.py  constants.py  content_utils.py  edit_helpers.py  flows.py  panels.py  permissions.py  render.py  request_utils.py  states.py
handlers/admin/handlers/: __init__.py  ads.py  (+11 more)
middlewares/: forcesub.py  security.py  throttling.py
repositories/: __init__.py  channels.py  content.py  requests.py  users.py
services/: __init__.py  channel_service.py  legacy_media.py  stats_webapp_auth.py  telegram_context.py  user_views.py
tests/: conftest.py  test_auth.py  test_cache.py  test_channel_service.py  test_config.py  test_guards.py  test_keyboards.py  test_middleware.py
