[project]
name = "cinema-bot"
version = "1.0.0"
description = "Telegram Cinema Bot — kino va seriallarni boshqarish boti"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.26.0",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.2.2",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "webapp.py"]
